# tintX

./: .Readme.ipynb  .coveragerc  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  TintTrack.py  environment_ci.yml  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/: dependabot.yml
.github/dependabot/: constraints.txt
.github/workflows/: pypi_job.yml  tests.yml
docs/: environment.yml  requirements-rtd.txt
docs/source/: Example_1.ipynb  Example_2.ipynb  III_Using_the_command_line_interface.ipynb  II_Tracking_already_loaded_datasets.ipynb  I_Tracking_data_from_files.ipynb  QuickStart.rst  RainTracking.ipynb  TintCli.ipynb  api.rst  conf.py  index.rst
docs/source/.ipynb_checkpoints/: RainTracking-checkpoint.ipynb
docs/source/_static/data/: CMORPH_V1.0_ADJ_8km-30min_2020012501.nc  CMORPH_V1.0_ADJ_8km-30min_2020012502.nc  CMORPH_V1.0_ADJ_8km-30min_2020012504.nc  CMORPH_V1.0_ADJ_8km-30min_2020012505.nc  CMORPH_V1.0_ADJ_8km-30min_2020012506.nc  CMORPH_V1.0_ADJ_8km-30min_2020012507.nc  CMORPH_V1.0_ADJ_8km-30min_2020012510.nc  CMORPH_V1.0_ADJ_8km-30min_2020012512.nc  CMORPH_V1.0_ADJ_8km-30min_2020012513.nc  CMORPH_V1.0_ADJ_8km-30min_2020012516.nc  CMORPH_V1.0_ADJ_8km-30min_2020012520.nc
examples/: RainTracking.ipynb  RainTracking.py  SatteliteTrack.py
examples/.ipynb_checkpoints/: RainTracking-checkpoint.ipynb
examples/data/: CMORPH_V1.0_ADJ_8km-30min_2020012500.nc  CMORPH_V1.0_ADJ_8km-30min_2020012503.nc  CMORPH_V1.0_ADJ_8km-30min_2020012508.nc  CMORPH_V1.0_ADJ_8km-30min_2020012509.nc  CMORPH_V1.0_ADJ_8km-30min_2020012511.nc  CMORPH_V1.0_ADJ_8km-30min_2020012514.nc  CMORPH_V1.0_ADJ_8km-30min_2020012515.nc  CMORPH_V1.0_ADJ_8km-30min_2020012517.nc  CMORPH_V1.0_ADJ_8km-30min_2020012518.nc  CMORPH_V1.0_ADJ_8km-30min_2020012519.nc  CMORPH_V1.0_ADJ_8km-30min_2020012521.nc  CMORPH_V1.0_ADJ_8km-30min_2020012522.nc  CMORPH_V1.0_ADJ_8km-30min_2020012523.nc  CPOL_radar.nc
examples/tracks/: radar_tracks_2006_11_16_03-2006_11_16_11.h5  sat_tracks_2020_01_25_00-2020_01_25_09.h5  tint_tracks_2006_11_16_03-2006_11_16_11.h5  tint_tracks_2006_11_16_03-2006_11_16_11.pkl
src/tintx/: __init__.py  cli.py  config.py  grid_utils.py  helpers.py  matching.py  objects.py  phase_correlation.py  reader.py  tracks.py  types.py  version.py  visualization.py
src/tintx/test/: conftest.py  test_config.py  test_tracking.py  test_utils.py  test_visualisation.py
tests/: conftest.py  test_cli.py  test_config.py  test_utils.py  test_visualisation.py
tint/: __init__.py  grid_utils.py  helpers.py  objects.py  reader.py  tracks.py  visualization.py
tintx_core/: Cargo.toml  Tarpaulin.toml
tintx_core/src/: lib.rs  phase_correlation.rs
